--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
+  <link rel="stylesheet" href="./index.css">
 </head>
-<body>
+<body class="page">
+  <header class="header">
+    <img src="./images/logo.svg" alt="Логотип Место" class="header__logo">
+  </header>
   
 </body>
 </html>
