--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
     <img src="../images/logo.svg" alt="Логотип Место" class="header__logo">
   </header>
   <main class="content">
-    <section class="profile"></section>
+    <section class="profile">
+      <div class="avatar">
+        <img src="./images/cousto.jpg" alt="Пожилой мужчина в красной шапке" class="profile__avatar">
+      </div>
+      <div class="profile__info">
+        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <button class="profile__edit-button" type="button"></button>
+        <p class="profile__subtitle">Исследователь океана</p>
+      </div>
+      <button class="profile__add-button" type="button"></button>
+    </section>
     <section class="elements"></section>
 
   </main>
