feat(elements): добавить блок, стили, заголовки, картинки

--- a/index.html
+++ b/index.html
@@ -23,7 +23,62 @@
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
-    <section class="elements"></section>
+    <section class="elements">
+      <div class="element">
+        <div class="element__image">
+          <img src="./images/alakol-unsplash.jpg" alt="озеро с голубой водой в горах" class="element__image">
+        </div>
+        <div class="element__info">
+        <h3 class="element__title">Ала-Куль</h3>
+        <button class="element__like-button"></button>
+        </div>
+      </div>
+      <div class="element">
+        <div class="element__image">
+          <img src="./images/karakol-unsplash.jpg" alt="ели в снегу на фоне голубого неба" class="element__image">
+        </div>
+        <div class="element__info">
+          <h3 class="element__title">Каракол</h3>
+          <button class="element__like-button"></button>
+        </div>
+      </div>
+      <div class="element">
+        <div class="element__image">
+          <img src="./images/kegety-unsplash.jpg" alt="горное ущелье с зелеными елями" class="element__image">
+        </div>
+        <div class="element__info">
+          <h3 class="element__title">Кегеты</h3>
+          <button class="element__like-button"></button>
+        </div>
+      </div>
+      <div class="element">
+        <div class="element__image">
+          <img src="./images/naryn-unsplash.jpg" alt="пастух на лошади на фоне гор" class="element__image">
+        </div>
+        <div class="element__info">
+          <h3 class="element__title">Нарын</h3>
+          <button class="element__like-button"></button>
+        </div>
+      </div>
+      <div class="element">
+        <div class="element__image">
+          <img src="./images/sonkul-unsplash.jpg" alt="юрта на фоне озера" class="element__image">
+        </div>
+        <div class="element__info">
+          <h3 class="element__title">Сон-Куль</h3>
+          <button class="element__like-button"></button>
+        </div>
+      </div>
+      <div class="element">
+        <div class="element__image">
+          <img src="./images/issykul-unsplash.jpg" alt="прозрачное озеро с камнями" class="element__image">
+        </div>
+        <div class="element__info">
+          <h3 class="element__title">Иссык-Куль</h3>
+          <button class="element__like-button"></button>
+        </div>
+      </div>
+    </section>
 
   </main>
   <footer class="footer"></footer>
