--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
         </div>
       </div>
     </section>
-
   </main>
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <p class="footer__copyright">&copy;2023 Mesto Kyrgyzstan</p>
+  </footer>
 </body>
 </html>
