--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <link rel="stylesheet" href="../pages/index.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
   <header class="header">
-    <img src="../images/logo.svg" alt="Логотип Место" class="header__logo">
+    <img src="./images/logo.svg" alt="Логотип Место" class="header__logo">
   </header>
   <main class="content">
     <section class="profile">
