--- a/index.html
+++ b/index.html
@@ -1,90 +1,123 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mesto</title>
-  <link rel="stylesheet" href="./pages/index.css">
-</head>
-<!-- убрать этот бордер -->
-<!-- <div style="border:3px solid blue; outline: 3px solid red"> -->
-<body class="page">
-  <header class="header">
-    <img src="./images/logo.svg" alt="Логотип Место" class="header__logo">
-  </header>
-  <main class="content">
-    <section class="profile">
-      <div class="avatar">
-        <img src="./images/cousto.jpg" alt="Пожилой мужчина в красной шапке" class="profile__avatar">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mesto</title>
+    <link rel="stylesheet" href="./pages/index.css">
+  </head>
+  <!-- убрать этот бордер -->
+  <!-- <div style="border:3px solid blue; outline: 3px solid red"> -->
+  <body class="page">
+    <header class="header">
+      <img src="./images/logo.svg" alt="Логотип Место" class="header__logo">
+    </header>
+    <main class="content">
+      <section class="profile">
+        <div class="avatar">
+          <img
+            src="./images/cousto.jpg"
+            alt="Пожилой мужчина в красной шапке"
+            class="profile__avatar">
+        </div>
+        <div class="profile__info">
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <button class="profile__edit-button" type="button"></button>
+          <p class="profile__subtitle">Исследователь океана</p>
+        </div>
+        <button class="profile__add-button" type="button"></button>
+      </section>
+      <ul class="elements">
+        <li class="element">
+          <div class="element__image">
+            <img
+              src="./images/alakol-unsplash.jpg"
+              alt="озеро с голубой водой в горах"
+              class="element__image">
+          </div>
+          <div class="element__info">
+            <h3 class="element__title">Ала-Куль</h3>
+            <button class="element__like-button"></button>
+          </div>
+        </li>
+        <li class="element">
+          <div class="element__image">
+            <img
+              src="./images/karakol-unsplash.jpg"
+              alt="ели в снегу на фоне голубого неба"
+              class="element__image">
+          </div>
+          <div class="element__info">
+            <h3 class="element__title">Каракол</h3>
+            <button class="element__like-button"></button>
+          </div>
+        </li>
+        <li class="element">
+          <div class="element__image">
+            <img
+              src="./images/kegety-unsplash.jpg"
+              alt="горное ущелье с зелеными елями"
+              class="element__image">
+          </div>
+          <div class="element__info">
+            <h3 class="element__title">Кегеты</h3>
+            <button class="element__like-button"></button>
+          </div>
+        </li>
+        <li class="element">
+          <div class="element__image">
+            <img
+              src="./images/naryn-unsplash.jpg"
+              alt="пастух на лошади на фоне гор"
+              class="element__image">
+          </div>
+          <div class="element__info">
+            <h3 class="element__title">Нарын</h3>
+            <button class="element__like-button"></button>
+          </div>
+        </li>
+        <li class="element">
+          <div class="element__image">
+            <img
+              src="./images/sonkul-unsplash.jpg"
+              alt="юрта на фоне озера"
+              class="element__image">
+          </div>
+          <div class="element__info">
+            <h3 class="element__title">Сон-Куль</h3>
+            <button class="element__like-button"></button>
+          </div>
+        </li>
+        <li class="element">
+          <div class="element__image">
+            <img
+              src="./images/issykul-unsplash.jpg"
+              alt="прозрачное озеро с камнями"
+              class="element__image">
+          </div>
+          <div class="element__info">
+            <h3 class="element__title">Иссык-Куль</h3>
+            <button class="element__like-button"></button>
+          </div>
+        </li>
+      </ul>
+    </main>
+    <footer class="footer">
+      <p class="footer__copyright">&copy;2023 Mesto Kyrgyzstan</p>
+    </footer>
+    <!-- pop-up -->
+    <section class="popup">
+      <div class="popup__container">
+        <button class="popup__close" type="button"></button>
+        <div class="popup__content">
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <p class="popup__name"></p>
+          <p class="popup__job"></p>
+        </div>
       </div>
-      <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
-        <button class="profile__edit-button" type="button"></button>
-        <p class="profile__subtitle">Исследователь океана</p>
-      </div>
-      <button class="profile__add-button" type="button"></button>
     </section>
-    <section class="elements">
-      <div class="element">
-        <div class="element__image">
-          <img src="./images/alakol-unsplash.jpg" alt="озеро с голубой водой в горах" class="element__image">
-        </div>
-        <div class="element__info">
-        <h3 class="element__title">Ала-Куль</h3>
-        <button class="element__like-button"></button>
-        </div>
-      </div>
-      <div class="element">
-        <div class="element__image">
-          <img src="./images/karakol-unsplash.jpg" alt="ели в снегу на фоне голубого неба" class="element__image">
-        </div>
-        <div class="element__info">
-          <h3 class="element__title">Каракол</h3>
-          <button class="element__like-button"></button>
-        </div>
-      </div>
-      <div class="element">
-        <div class="element__image">
-          <img src="./images/kegety-unsplash.jpg" alt="горное ущелье с зелеными елями" class="element__image">
-        </div>
-        <div class="element__info">
-          <h3 class="element__title">Кегеты</h3>
-          <button class="element__like-button"></button>
-        </div>
-      </div>
-      <div class="element">
-        <div class="element__image">
-          <img src="./images/naryn-unsplash.jpg" alt="пастух на лошади на фоне гор" class="element__image">
-        </div>
-        <div class="element__info">
-          <h3 class="element__title">Нарын</h3>
-          <button class="element__like-button"></button>
-        </div>
-      </div>
-      <div class="element">
-        <div class="element__image">
-          <img src="./images/sonkul-unsplash.jpg" alt="юрта на фоне озера" class="element__image">
-        </div>
-        <div class="element__info">
-          <h3 class="element__title">Сон-Куль</h3>
-          <button class="element__like-button"></button>
-        </div>
-      </div>
-      <div class="element">
-        <div class="element__image">
-          <img src="./images/issykul-unsplash.jpg" alt="прозрачное озеро с камнями" class="element__image">
-        </div>
-        <div class="element__info">
-          <h3 class="element__title">Иссык-Куль</h3>
-          <button class="element__like-button"></button>
-        </div>
-      </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <p class="footer__copyright">&copy;2023 Mesto Kyrgyzstan</p>
-  </footer>
-</body>
-<!-- </div> -->
+  </body>
+  <!-- </div> -->
+  <script src="./scripts/index.js"></script>
 </html>
