style(form): добавить стили в попап

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <section class="form__field">
                 <input class="form__input form__field_job" type="text" placeholder="Должность">
               </section>
-              <button type="submit" class="form__submit-button"></button>
+              <button type="submit" class="form__submit-button">Сохранить</button>
             </fieldset>
           <!-- <p class="popup__name"></p>
           <p class="popup__job"></p> -->
