perf(popup): реализовать изменение полей

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
           <form class="form">
             <fieldset class="form__container">
               <section class="form__field">
-                <input class="form__input form__field_name" type="text" placeholder="Имя">
+                <input class="form__input popup__name" type="text" placeholder="Имя">
               </section>
               <section class="form__field">
-                <input class="form__input form__field_job" type="text" placeholder="Должность">
+                <input class="form__input popup__job" type="text" placeholder="О себе">
               </section>
               <button type="submit" class="form__submit-button">Сохранить</button>
             </fieldset>
