--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
           </form>
       </div>
     </section>
+    <!-- ------------script----------- -->
     <script src="./scripts/index.js"></script>
   </body>
 </html>
