fix(popup): исправить ошибки валидатора

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         </div>
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button popup_is-opened" type="button"></button>
+          <button class="profile__edit-button profile__edit-button_is-opened" type="button"></button>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
         <button class="profile__add-button" type="button"></button>
       </section>
-<!-- -------------cards-------------- -->
+<!-- -------------elements-------------- -->
       <ul class="elements">
         <li class="element">
           <div class="element__image">
