--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button popup_is-opened" type="button"></button>
+          <button class="profile__edit-button" type="button"></button>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
         <button class="profile__add-button" type="button"></button>
@@ -108,7 +108,7 @@
       <p class="footer__copyright">&copy;2023 Mesto Kyrgyzstan</p>
     </footer>
 <!-- ----------pop-up---------- -->
-    <section class="popup">
+    <section class="popup popup_opened">
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
