--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
       <p class="footer__copyright">&copy;2023 Mesto Kyrgyzstan</p>
     </footer>
 <!-- ----------pop-up---------- -->
-    <section class="popup popup_opened">
+    <section class="popup">
+      <!-- <div class="popup_opened"></div> -->
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
@@ -125,7 +126,7 @@
           </form>
       </div>
     </section>
-    <!-- ------------script----------- -->
+<!-- ------------script----------- -->
     <script src="./scripts/index.js"></script>
   </body>
 </html>
