fix(script): исправить данные формы

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
           <form class="form" name="add-data">
             <fieldset class="form__container">
               <section class="form__field">
-                <input class="form__input form__input_name" name="name" type="text" placeholder="Имя">
+                <input class="form__input form__input_name" name="name" type="text" placeholder="Имя" value="">
               </section>
               <section class="form__field">
-                <input class="form__input form__input_job" name="job" type="text" placeholder="О себе">
+                <input class="form__input form__input_job" name="job" type="text" placeholder="О себе" value="">
               </section>
               <button type="submit" class="form__submit-button">Сохранить</button>
             </fieldset>
