--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
           <h2 class="popup__title">Редактировать профиль</h2>
           <form class="form" name="add-data">
             <fieldset class="form__container">
-                <input class="form__input form__input_name" name="name" type="text" placeholder="Имя" value="">
-                <input class="form__input form__input_job" name="job" type="text" placeholder="О себе" value="">
+                <input class="form__input form__input_type_name" name="name" type="text" placeholder="Имя" value="">
+                <input class="form__input form__input_type_job" name="job" type="text" placeholder="О себе" value="">
               <button type="submit" class="form__submit-button">Сохранить</button>
             </fieldset>
           </form>
