--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <form class="form submit_form" name="add-data" >
+          <form class="form submitForm" name="add-data" >
             <fieldset class="form__container">
                 <input class="form__input form__input_type_name" name="name" type="text" placeholder="Имя" value="">
                 <input class="form__input form__input_type_job" name="job" type="text" placeholder="О себе" value="">
