feat(elements): добавить удаление карточки

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
       <ul class="elements">
       <template id="elementTemplate">
         <li class="element">
+          <button class="element__delete-button" type="button"></button>
           <img src="./images/alakol-unsplash.jpg" alt="фото природы" class="element__image">
           <div class="element__info">
             <h3 class="element__title">Ала-Куль</h3>
             <button class="element__like-button" type="button"></button>
           </div>
-          <!-- <button class="element__delete-button" type="button"></button> -->
         </li>
       </template>
       </ul>
