--- a/index.html
+++ b/index.html
@@ -110,16 +110,30 @@
     <footer class="footer">
       <p class="footer__copyright">&copy;2023 Mesto Kyrgyzstan</p>
     </footer>
-<!-- ----------pop-up---------- -->
-    <div class="popup">
+<!-- ----------profile edition pop-up---------- -->
+    <div class="popup popup_type_edit">
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <form class="form" name="add-data" >
+          <form class="form" name="edit-data" >
             <fieldset class="form__container">
                 <input class="form__input form__input_type_name" name="name" type="text" placeholder="Имя" value="">
                 <input class="form__input form__input_type_job" name="job" type="text" placeholder="О себе" value="">
               <button type="submit" class="form__submit-button">Сохранить</button>
+            </fieldset>
+          </form>
+      </div>
+    </div>
+<!-- ----------new item pop-up---------- -->
+    <div class="popup popup_type_add">
+      <div class="popup__container">
+        <button class="popup__close" type="button"></button>
+          <h2 class="popup__title">Новое место</h2>
+          <form class="form" name="add-data" >
+            <fieldset class="form__container">
+                <input class="form__input form__input_type_name" name="name" type="text" placeholder="Название" value="">
+                <input class="form__input form__input_type_job" name="job" type="text" placeholder="Ссылка на картинку" value="">
+              <button type="submit" class="form__submit-button">Создать</button>
             </fieldset>
           </form>
       </div>
