--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <form class="form" name="edit-data" >
+          <form class="form form_type_edit" name="edit-data" >
             <fieldset class="form__container">
                 <input class="form__input form__input_type_name" name="name" type="text" placeholder="Имя" value="">
                 <input class="form__input form__input_type_job" name="job" type="text" placeholder="О себе" value="">
@@ -129,10 +129,10 @@
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
           <h2 class="popup__title">Новое место</h2>
-          <form class="form" name="add-data" >
+          <form class="form form_type_add" name="add-data" >
             <fieldset class="form__container">
-                <input class="form__input form__input_type_name" name="name" type="text" placeholder="Название" value="">
-                <input class="form__input form__input_type_job" name="job" type="text" placeholder="Ссылка на картинку" value="">
+                <input class="form__input form__input_type_title" name="title" type="text" placeholder="Название" value="">
+                <input class="form__input form__input_type_link" name="link" type="text" placeholder="Ссылка на картинку" value="">
               <button type="submit" class="form__submit-button">Создать</button>
             </fieldset>
           </form>
