--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
         </form>
       </div>
     </div>
+    <!-- ---------------image zoom-------------- -->
+    <div class="popup popup_image">
+      <figure class="popup__image-container">
+        <img src="#" alt="#" class="popup__image">
+        <figcaption class="popup__image-caption"></figcaption>
+        <button class="popup__close" type="button"></button>
+      </figure>
+    </div>
     <!--------------script------------->
     <script src="./scripts/index.js"></script>
   </body>
