refactor: скорректировать наименования классов по БЭМ

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       <p class="footer__copyright">&copy;2023 Mesto Kyrgyzstan</p>
     </footer>
     <!------------profile edition pop-up------------>
-    <div class="popup popup_edit">
+    <div class="popup login-popup">
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="form form_edit" name="add-data">
+        <form class="form login-form" name="add-data">
           <fieldset class="form__container">
             <input
               class="form__input form__input_type_name"
@@ -81,11 +81,11 @@
       </div>
     </div>
     <!------------new item pop-up------------>
-    <div class="popup popup_add">
+    <div class="popup newitem-popup">
       <div class="popup__container">
-        <button class="popup__close popup_add_close" type="button"></button>
+        <button class="popup__close newitem-popup__close" type="button"></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="form form_add" name="add-data">
+        <form class="form newitem-form" name="add-data">
           <fieldset class="form__container">
             <input
               class="form__input form__input_type_title"
@@ -101,7 +101,7 @@
               value="">
             <button
               type="submit"
-              class="form__submit-button form__submit-button_add">
+              class="form__submit-button newitem-form__submit-button">
               Создать
             </button>
           </fieldset>
