feature: добавить открытие попапа с картинкой

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
       </div>
     </div>
     <!-- ---------------image zoom-------------- -->
-    <div class="popup popup_image">
+    <div class="popup image-popup">
       <figure class="popup__image-container">
-        <img src="#" alt="#" class="popup__image">
+        <img src="#" alt="#" class="popup_image_zoomed">
         <figcaption class="popup__image-caption"></figcaption>
-        <button class="popup__close" type="button"></button>
+        <button class="popup__close popup_close_zoomed" type="button"></button>
       </figure>
     </div>
     <!--------------script------------->
