--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </form>
       </div>
     </div>
-    <!-- image zoom -->
+    <!-- image popup -->
     <div class="popup zoom-popup">
       <div class="popup__image-container">
         <img src="#" alt="#" class="popup__image">
