--- a/index.html
+++ b/index.html
@@ -71,11 +71,7 @@
               type="text"
               placeholder="О себе"
               value="">
-            <button
-              type="submit"
-              class="form__submit-button">
-              Сохранить
-            </button>
+            <button type="submit" class="form__submit-button">Сохранить</button>
           </fieldset>
         </form>
       </div>
@@ -83,7 +79,10 @@
     <!-- new item pop-up -->
     <div class="popup newitem-popup">
       <div class="popup__container">
-        <button class="popup__close newitem-popup__close" type="button"></button>
+        <button
+          class="popup__close newitem-popup__close"
+          type="button">
+        </button>
         <h2 class="popup__title">Новое место</h2>
         <form class="form newitem-form" name="add-data">
           <fieldset class="form__container">
