--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
     <header class="header">
-      <img src="./images/logo.svg" alt="Логотип Место" class="header__logo">
+      <img src="./images/logo.svg" alt="Логотип Место" class="header__logo" />
     </header>
     <main class="content">
       <!-- profile -->
@@ -17,7 +17,8 @@
         <img
           src="./images/cousto.jpg"
           alt="фото аватара"
-          class="profile__avatar">
+          class="profile__avatar"
+        />
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
@@ -38,7 +39,8 @@
               <img
                 src="./images/alakol-unsplash.jpg"
                 alt="фото природы"
-                class="element__image">
+                class="element__image"
+              />
               <div class="element__info">
                 <h3 class="element__title">Ала-Куль</h3>
                 <button class="element__like-button" type="button"></button>
@@ -55,7 +57,10 @@
     <!-- profile edition pop-up -->
     <div class="popup profile-popup">
       <div class="popup__container">
-        <button class="popup__close profile-popup__close" type="button"></button>
+        <button
+          class="popup__close profile-popup__close"
+          type="button"
+        ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="form profile-form" name="add-data">
           <fieldset class="form__container">
@@ -65,14 +70,16 @@
               type="text"
               placeholder="Имя"
               value=""
-              required>
+              required
+            />
             <input
               class="form__input form__input_type_job"
               name="job"
               type="text"
               placeholder="О себе"
               value=""
-              required>
+              required
+            />
             <button type="submit" class="form__submit-button">Сохранить</button>
           </fieldset>
         </form>
@@ -83,8 +90,8 @@
       <div class="popup__container">
         <button
           class="popup__close newitem-popup__close"
-          type="button">
-        </button>
+          type="button"
+        ></button>
         <h2 class="popup__title">Новое место</h2>
         <form class="form newitem-form" name="add-data">
           <fieldset class="form__container">
@@ -94,17 +101,20 @@
               type="text"
               placeholder="Название"
               value=""
-              required>
+              required
+            />
             <input
               class="form__input form__input_type_link"
               name="link"
               type="url"
               placeholder="Ссылка на картинку"
               value=""
-              required>
+              required
+            />
             <button
               type="submit"
-              class="form__submit-button newitem-form__submit-button">
+              class="form__submit-button newitem-form__submit-button"
+            >
               Создать
             </button>
           </fieldset>
@@ -114,7 +124,7 @@
     <!-- image popup -->
     <div class="popup zoom-popup">
       <div class="popup__image-container">
-        <img src="#" alt="#" class="popup__image">
+        <img src="#" alt="#" class="popup__image" />
         <div class="popup__image-caption"></div>
         <button class="popup__close zoom-popup__close" type="button"></button>
       </div>
