--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p class="footer__copyright">&copy;2023 Mesto Kyrgyzstan</p>
     </footer>
     <!-- profile edition pop-up -->
-    <div class="popup profile-popup">
+    <div class="popup popup-profile">
       <div class="popup__container">
         <button class="popup__close profile-popup__close" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
