--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     </div>
     <!---script-->
     <script src="./scripts/cards.js"></script>
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
