--- a/index.html
+++ b/index.html
@@ -62,24 +62,32 @@
           type="button"
         ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="form profile-form" name="add-data">
+        <form class="form profile-form" name="edit-form" novalidate>
           <fieldset class="form__container">
             <input
               class="form__input form__input_type_name"
               name="name"
+              id="name"
               type="text"
               placeholder="Имя"
               value=""
+              minlength="2"
+              maxlength="40"
               required
             />
+            <span class="form__input-error" id="name-error"></span>
             <input
               class="form__input form__input_type_job"
               name="job"
+              id="job"
               type="text"
               placeholder="О себе"
               value=""
+              minlength="2"
+              maxlength="200"
               required
             />
+            <span class="form__input-error" id="job-error"></span>
             <button type="submit" class="form__submit-button">Сохранить</button>
           </fieldset>
         </form>
@@ -93,11 +101,12 @@
           type="button"
         ></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="form newitem-form" name="add-data">
+        <form class="form newitem-form" name="add-form" novalidate>
           <fieldset class="form__container">
             <input
               class="form__input form__input_type_title"
               name="title"
+              id="title"
               type="text"
               placeholder="Название"
               value=""
