--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           type="button"
         ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="form profile-form" name="edit-form">
+        <form class="form profile-form" name="profile-form">
           <fieldset class="form__container">
             <input
               class="form__input form__input_type_name"
@@ -101,7 +101,7 @@
           type="button"
         ></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="form newitem-form" name="add-form">
+        <form class="form newitem-form" name="newitem-form">
           <fieldset class="form__container">
             <input
               class="form__input form__input_type_title"
