--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
       </div>
     </div>
     <!---script-->
-    <script src="./scripts/cards.js"></script>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <!-- <script src="./scripts/Card.js"></script> -->
+    <script src="./scripts/FormValidator.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
