--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
     <!---script-->
     <!-- <script src="./scripts/Card.js"></script> -->
-    <script src="./scripts/FormValidator.js"></script>
+    <!-- <script src="./scripts/FormValidator.js"></script> -->
     <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
