--- a/index.html
+++ b/index.html
@@ -144,6 +144,6 @@
       </div>
     </div>
     <!---script-->
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
