--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css" />
+    <!-- <link rel="stylesheet" href="./pages/index.css" /> -->
   </head>
   <body class="page">
     <header class="header">
-      <img src="./images/logo.svg" alt="Логотип Место" class="header__logo" />
+      <img src="<%=require("./images/logo.svg")%>" alt="Логотип Место"
+      class="header__logo">
     </header>
     <main class="content">
       <!-- profile -->
       <section class="profile">
-        <img
-          src="./images/cousto.jpg"
-          alt="фото аватара"
-          class="profile__avatar"
-        />
+        <img src="<%=require("./images/cousto.jpg")%>" alt="фото аватара"
+        class="profile__avatar" />
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button class="profile__edit-button" type="button"></button>
@@ -143,7 +141,7 @@
         <button class="popup__close zoom-popup__close" type="button"></button>
       </div>
     </div>
-    <!---script-->
-    <script type="module" src="./pages/index.js"></script>
+    <!-- -script
+    <script type="module" src="./index.js"></script> -->
   </body>
 </html>
