ref: рабочая сборка

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             <li class="element">
               <button class="element__delete-button" type="button"></button>
               <img
-                src="<%=require(./images/alakol-unsplash.jpg")>
+                src="./images/alakol-unsplash.jpg"
                 alt="фото природы"
                 class="element__image"
               />
