--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,55 @@
         <button class="popup__close zoom-popup__close" type="button"></button>
       </div>
     </div>
-    <!-- -script
-    <script type="module" src="./index.js"></script> -->
+    <!-- avatar popup -->
+    <div class="popup avatar-popup">
+      <div class="popup__container">
+        <button
+          class="popup__close newitem-popup__close"
+          type="button"
+        ></button>
+        <h2 class="popup__title">Новое место</h2>
+        <form class="form newitem-form" name="avatar-form">
+          <fieldset class="form__container">
+            <input
+              class="form__input form__input_type_link"
+              name="avatar"
+              id="avatar"
+              type="url"
+              placeholder="Ссылка на картинку"
+              value=""
+              required
+            />
+            <span class="form__error form__error_type_avatar"></span>
+            <button
+              type="submit"
+              class="form__submit-button newitem-form__submit-button"
+            >
+              Создать
+            </button>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+    <!-- delete popup -->
+    <div class="popup delete-popup">
+      <div class="popup__container">
+        <button
+          class="popup__close newitem-popup__close"
+          type="button"
+        ></button>
+        <h2 class="popup__title">Новое место</h2>
+        <form class="form newitem-form" name="delete-form">
+          <fieldset class="form__container">
+            <button
+              type="submit"
+              class="form__submit-button newitem-form__submit-button"
+            >
+              Создать
+            </button>
+          </fieldset>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
